fixed text align issue

--- a/cents-of-unity/src/components/profile/Profile.css
+++ b/cents-of-unity/src/components/profile/Profile.css
@@ -1,20 +1,20 @@
 @import '~antd/dist/antd.css';
-.App {
-  text-align: left;
+.Profile {
+  text-align: center;
 }
 
-.App-logo {
+.Profile-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .Profile-logo {
+    animation: Profile-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
+.Profile-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -25,11 +25,11 @@
   color: white;
 }
 
-.App-link {
+.Profile-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+@keyframes Profile-logo-spin {
   from {
     transform: rotate(0deg);
   }
